--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"cors": "^2.8.5",
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"mongoose": "^8.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.1"
